# aws-dp-template

./: example.env  pyproject.toml  requirements.txt
.github/workflows/: dev-docker-images.yml  dev-ecr-images.yml  prd-docker-images.yml  prd-ecr-images.yml
notebooks/examples/: crypto_nb.ipynb  crypto_prices.ipynb  hello_world.ipynb
scripts/: install.sh
workflows/: buckets.py  sql_dbs.py
workflows/crypto/: prices.py  prices_aws.py  prices_pg.py
workflows/notebooks/: notebooks_daily.py
workspace/: config.py  settings.py
workspace/dev/: assistant.py  aws_config.py  aws_resources.py  databox.py  docker_config.py  postgres.py  traefik.py
workspace/dev/airflow/: docker_resources.py
workspace/dev/airflow/resources/: requirements-airflow.txt
workspace/dev/databox/: docker_resources.py
workspace/dev/databox/resources/: requirements-databox.txt
workspace/dev/images/: __init__.py  build_airflow_image.sh  build_databox_image.sh  build_jupyter_image.sh  build_superset_image.sh  databox.Dockerfile  jupyter.Dockerfile
workspace/dev/jupyter/: docker_resources.py
workspace/dev/superset/: docker_resources.py
workspace/k8s/: whoami.py
workspace/prd/: aws_config.py  aws_resources.py  docker_config.py  k8s_config.py  postgres.py  traefik.py
workspace/prd/airflow/: aws_resources.py  k8s_apps.py
workspace/prd/airflow/resources/: requirements-airflow.txt
workspace/prd/images/: __init__.py
workspace/prd/jupyter/: jupyterlab.py
workspace/prd/superset/: aws_resources.py  k8s_apps.py
